--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ span {
   margin-bottom: 1.5em;
   font-weight: 400;
   font-family: "Inconsolata", monospace;
+  font-size: 20px;
 }
 
 .cert {
@@ -1776,7 +1777,105 @@ button {
   text-transform: capitalize;
   font-size: 15px;
 }
-.persona{
+
+.persona {
   display: block;
   font-size: 15px;
 }
+
+.learning {
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 100%;
+}
+
+
+
+
+
+
+
+
+.floating-menu {
+  border-radius: 100px;
+  z-index: 999;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  right: 0;
+  position: fixed;
+  display: inline-block;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%)
+}
+
+.main-menu-s {
+  margin: 0;
+  padding-left: 0;
+  list-style: none
+}
+
+.main-menu-s li a {
+  display: block;
+  padding: 5px;
+  color: #fff;
+  border-radius: 50px;
+  position: relative;
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none
+}
+
+.main-menu-s li a:hover {
+  background: rgba(244, 244, 244, .3)
+}
+
+.menu-bg-s {
+  background-image: -webkit-linear-gradient(top, #1C5E91 0, #167699 100%);
+  background-image: -o-linear-gradient(top, #1C5E91 0, #167699 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#1C5E91), to(#167699));
+  background-image: linear-gradient(to bottom, #1C5E91 0, #167699 100%);
+  background-repeat: repeat-x;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  -webkit-transition: .1s;
+  -o-transition: .1s;
+  transition: .1s
+}
+
+.ripple {
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0)
+}
+
+.ripple:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  transform: scale(10, 10);
+  opacity: 0;
+  transition: transform .5s, opacity 1s
+}
+
+.ripple:active:after {
+  transform: scale(0, 0);
+  opacity: .2;
+  transition: 0s
+}
+
+
